--- a/styles/style.css
+++ b/styles/style.css
@@ -210,7 +210,7 @@ nav ul li a:hover
         box-shadow: 0 0 10px rgba(255, 253, 253, 0.3);
       }
       .card-header{
-        background-image: url('/assets/1.jpg');
+        background-image: url('assets/1.jpg');
         position: relative;
         height: 220px;
         background-size: cover;
