--- a/styles/style.css
+++ b/styles/style.css
@@ -3,17 +3,16 @@
     padding:0;
     margin:0;
     text-decoration: none;
-    list-style: none;
     box-sizing: border-box;
 }
 body
 {
-    
     background-color:#00101b;
     font-family: montserrat;
 }
 nav
 {
+    list-style: none;
     background:#00101b;
     height: 80px;
     width:100%;
@@ -24,7 +23,7 @@ label.logo
     color:rgb(60, 255, 0);
     font-size: 35px;
     line-height: 80px;
-    padding:0 100px;
+    padding:0 80px;
     font-weight: bold;
 }
 nav ul
@@ -262,14 +261,30 @@ nav ul li a:hover
   
 .project .left .content:hover{
     color:#fff;
-    background-color: rgb(7, 185, 7);
     box-shadow: none;
 }
 .project .right .content:hover{
     color:#fff;
-    background-color: rgb(7, 185, 7);
     box-shadow: none;
 }  
+
+.project .content h2 a{
+    color:rgb(7, 185, 7);
+}
+.project .content p b{
+    color:rgb(10, 248, 10);
+}
+.project .content ul li b{
+    color:rgb(10, 248, 10);
+}
+.project .content ul ul{
+    margin-left: 30px;
+    list-style-type:disc;
+}
+.project .content h2 a:hover{
+    color:rgb(10, 248, 10);
+    cursor: pointer;
+}
 /* project page end */
 
 /* Mobile responsive*/
@@ -448,6 +463,9 @@ nav ul li a:hover
     }
     .right {
         left: 0%;
+    }
+    .project .content ul{
+        display: none;
     }
       
 }
