--- a/styles/style.css
+++ b/styles/style.css
@@ -325,7 +325,7 @@ nav ul li a:hover
     .achievement .bigscreen h1{
         text-align: left;
     }
-    .achievement .bigscreen h1{
+    .contact .bigscreen h1{
         text-align: left;
     }
 }
